# zerotier-toolkit

./: .eslintrc  .gitignore  .gitmodules  .prettierrc  LICENSE  README.md  constant.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  release_updater_debug.yml
.husky/: pre-commit
scripts/: fetch-latest-core.sh
src/: App.css  App.tsx  constant.ts  heroui.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.debug.conf.json  tauri.release.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: configuration.json
src-tauri/src/: auto_launch.rs  auto_launch_manager.rs  command.rs  configuration.rs  embedding_zerotier.rs  experiment.rs  i18n.rs  lib.rs  logger.rs  main.rs  r.rs  system.rs  system_tray.rs  update_check.rs  window.rs  windows_service_manage.rs  zerotier_manage.rs
src-tauri/src/configurations/: auth_configurations.rs  configuration_base.rs  configurations_command.rs  configurations_service.rs  mod.rs  system_configurations.rs  zerotier_configurations.rs
src-tauri/src/util/: mod.rs  resources_file_util.rs
src-utools/: plugin.json  preload.ts  tsconfig.json
src/__mocks__/: zerotier.ts  zustand.ts
src/components/: Icon.tsx  LogCard.tsx  LogsModal.tsx  NotificationBar.tsx
src/components/base/: CopyText.tsx  Icon.tsx  LogsModal.tsx  Notification.tsx  NotificationBar.tsx  RefreshButton.tsx  SideMenu.tsx  StatusCard.tsx  TitleBar.tsx  TitleBarButtons.tsx
src/components/base/__tests__/: CopyText.test.tsx  Icon.test.tsx  RefreshButton.test.tsx  StatusCard.test.tsx  TitleBarButtons.test.tsx
src/components/layout/: RootLayout.tsx
src/components/layout/__tests__/: RootLayout.test.tsx
src/components/providers/: LanguageProvider.tsx  NotificationProvider.tsx  ThemeProvider.tsx  TrayProvider.tsx
src/components/providers/__tests__/: ThemeProvider.test.tsx
src/components/setting/: AppearanceSetting.tsx  GeneralSetting.tsx  ZerotierServiceSetting.tsx
src/components/setting/__tests__/: AppearanceSetting.test.tsx  ZerotierServiceSetting.test.tsx
src/components/ui/: Icon.tsx
src/components/ui/__tests__/: Icon.test.tsx
src/components/zerotier/: ZerotierNetworks.tsx  ZerotierService.tsx
src/components/zerotier/__tests__/: ZerotierService.test.tsx
src/components/zerotier/network/: DetailsModal.tsx  JoinModal.tsx  NetworksTable.tsx  RefreshButton.tsx  ToolBar.tsx  ZerotierNetworks.tsx
src/components/zerotier/service/: ZerotierService.tsx
src/components/zerotier/service/__tests__/: ZerotierService.test.tsx
src/components/zerotier/status/: ZerotierStatus.tsx
src/i18n/: index.ts
src/i18n/resources/: index.ts  zh_CN.json
src/layout/: RootLayout.tsx
src/layout/__tests__/: RootLayout.test.tsx
src/pages/: About.tsx  Dev.tsx  DevNetworks.tsx  Home.tsx  Setting.tsx  Splash.tsx  Troubleshooting.tsx  Zerotier.tsx
src/pages/Settings/: AppearanceSetting.tsx  GeneralSetting.tsx
src/pages/Settings/__tests__/: AppearanceSetting.test.tsx  GeneralSetting.test.tsx
src/pages/Zerotier/Experiments/: ZerotierExperiments.tsx
src/pages/Zerotier/Networks/: DetailsModal.tsx  JoinModal.tsx  NetworksTable.tsx  ToolBar.tsx  ZerotierNetworks.tsx
src/pages/Zerotier/Service/: ZerotierService.tsx
src/pages/Zerotier/Status/: ZerotierStatus.tsx
src/pages/__tests__/: Setting.test.tsx  Splash.test.tsx
src/services/: zerotierService.ts
src/store/: app.ts  zerotier.ts
src/typings/: config.ts  enum.ts  global.ts  types.ts  zerotier.ts
src/utils/: formatDate.ts  httpHelper.ts  logHelpers.ts  tauriHelpers.ts  zerotierHelpers.ts
src/utils/__tests__/: logHelpers.test.ts  tauriHelpers.test.ts  zerotierHelpers.test.ts
src/utils/formatters/: formatDate.ts
src/utils/formatters/__tests__/: formatDate.test.ts
src/utils/helpers/: configHelpers.ts  index.ts  logHelpers.ts  tauriHelpers.ts  zerotierHelpers.ts
src/utils/helpers/__tests__/: configHelpers.test.ts  logHelpers.test.ts  tauriHelpers.test.ts  zerotierHelpers.test.ts
src/utils/helpers/tray/: index.ts  types.d.ts
src/utils/hooks/: useRequest.ts  useRestartAsAdmin.ts  useTauriEventListener.ts
src/utils/hooks/__tests__/: useRequest.test.ts  useTauriEventListener.test.ts
src/utils/testUtils/: setupTest.tsx  setupZustand.ts
src/utils/zerotier/: zerotierClient.ts
