[package]
name = "zerotier-toolkit"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = [
    "macos-private-api",
    "window-minimize",
    "window-hide",
    "window-start-dragging",
    "window-close",
    "window-unminimize",
    "window-show",
    "clipboard-write-text",
    "system-tray",
    "fs-write-file",
    "fs-read-file",
    "path-all",
    "http-request",
    "process-exit",
    "shell-open",
    "process-command-api",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
lazy_static = { version = "1.5.0", features = [] }
chrono = "0.4.38"
winapi = { version = "0.3.9", features = ["winsvc", "winbase", "errhandlingapi", "ntdef", "processthreadsapi", "synchapi"] }
parking_lot = "0.12.3"
auto-launch = "0.5.0"
thiserror = "1.0.63"
window-shadows = "0.2.2"
open = "5.3.0"
[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
