[package]
name = "zerotier-toolkit"
version = "0.0.1"
description = "A cross-platform ZeroTier desktop client"
license = "MIT"
repository = "https://github.com/Cowjiang/zerotier-toolkit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerotier_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api", "tray-icon",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
log = "0.4.22"
env_logger = "0.11.5"
lazy_static = { version = "1.5.0", features = [] }
chrono = "0.4.38"
winapi = { version = "0.3.9", features = ["winsvc", "winbase", "errhandlingapi", "ntdef", "processthreadsapi", "synchapi"] }
parking_lot = "0.12.3"
thiserror = "1.0.63"
open = "5.3.0"
reqwest = { version = "0.11.7", features = ["blocking"] }
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
